bk_ida/gccida/g0/recog_9
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10265:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10266:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1a = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10274:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10280:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10292:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10303:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10304:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1b = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10313:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10314:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( target_flags & 1) != 0 && ix86_unary_operator_ok( ABS, TFmode, recog_data_0.operand) && pnum_clobbers ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10319:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1b = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10329:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10330:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( target_flags & 1) != 0 && ix86_unary_operator_ok( NEG, TFmode, recog_data_0.operand) && pnum_clobbers ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10335:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1b = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10346:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10348:17: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[0] != 66 || *( _WORD *)recog_data_0.operand[1] != 66) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10348:61: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[0] != 66 || *( _WORD *)recog_data_0.operand[1] != 66) ) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10352:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1b = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10357:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/insn-recog.c:10359:17: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[0] != 66 || *( _WORD *)recog_data_0.operand[1] != 66) ) 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_9/src/obj/insn-recog.o] Error 1
